--- a/src/content/styles.css
+++ b/src/content/styles.css
@@ -1,9 +1,7 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
 .dokodemo-modal * {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 .dokodemo-modal input:focus,
@@ -11,3 +9,7 @@
   border: none !important;
   outline: none !important;
 }
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
