--- a/src/content/styles.css
+++ b/src/content/styles.css
@@ -10,6 +10,11 @@
   outline: none !important;
 }
 
+.dokodemo-modal a {
+  color: unset;
+  text-decoration: unset;
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
